# luxflow-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CREDENTIALS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  verify-platform.sh
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_baseline_schemas.py  002_identity_and_cases.py  003_documents_ai_workflows.py  004_sprint5_notifications.py  005_pgvector_document_chunks.py  006_notification_engine.py  007_password_reset_tokens.py
apps/api/scripts/: cleanup_stale_operations.py  generate_abhishek_sample_docs.py  qa_abhishek_pdf_case.py  qa_all_cases.py  qa_case_runner.py  qa_complex_case.py  qa_medium_case.py  qa_simple_case.py  seed_abhishek_case.py  seed_demo_data.py  seed_dev.py  seed_notification_users.py  seed_rbac_enterprise.py  seed_simple_case.py  seed_sprint4.py  seed_sprint5.py  seed_workflows.py
apps/api/scripts/data/: workflow_catalog.json
apps/api/src/lexflow_api/: __init__.py  celery_app.py  config.py  exceptions.py  main.py  middleware.py  telemetry.py
apps/api/src/lexflow_api/auth/: __init__.py  dependencies.py  internal_hmac.py  jwt.py  matter_wall.py  password.py  permissions.py  rate_limit.py  rbac.py  require_permission.py  workflow_rbac.py
apps/api/src/lexflow_api/db/: __init__.py  session.py  sync_session.py
apps/api/src/lexflow_api/models/: ai.py  (+10 more)
apps/api/templates/emails/: _activity_and_cta.html  _detail_table.html  _workflow_macros.html  ai-summary-approved.html  ai-summary-ready.html  approval-required.html  base.html  case-created.html  client-created.html  client-welcome.html  daily-report.html  document-uploaded.html  ocr-completed.html  password-reset.html  password-setup.html  system-health.html  workflow-completed.html  workflow-failed.html  workflow-started.html
apps/api/tests/: test_auth.py  test_case_create.py  test_cases.py  test_client_onboarding.py  test_document_chunking.py  test_documents.py  test_health.py  test_insurance_mva.py  test_internal_workflows.py  test_llm_providers.py  test_notification_engine.py  test_ocr_local.py  test_ollama_provider.py  test_operations.py  test_password_reset.py  test_permissions.py  test_sprint5.py
(+610 files in other folders)
