[project]
name = "lexflow-api"
version = "0.1.0"
description = "LexFlow AI — FastAPI application shell"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "celery>=5.4.0",
    "boto3>=1.35.0",
    "pika>=1.3.0",
    "httpx>=0.28.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-celery>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "types-redis>=4.6.0",
]
worker = [
    "celery>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["lexflow_api"]

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "pika", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
